# OpenDAoC-Core

./: .editorconfig  .gitattributes  .gitignore  DOLLinux.sln  Dawn of Light.sln  Dockerfile  EXPANSION_CLASSES.md  ML-Artis.7z  README.md  SRD_Game_Rule_Summary_Final_Report.md  SRD_Game_Rule_Summary_Implementation_Plan.md  SRD_Game_Rule_Summary_Priority_List.md  SRD_Game_Rule_Summary_Status.md  add_game_rule_summaries.py  appveyor.yml  docker-compose.yml  entrypoint.sh
CoreBase/: AssemblyInfo.cs  CompiledConstructorFactory.cs  Constants.cs  CoreBase.csproj  CoreBase.csproj.DotSettings  Marshal.cs  Statistics.cs  WeakMulticastDelegate.cs  WeakRef.cs
CoreConfig/: AssemblyInfo.cs  CoreConfig.Designer.cs  CoreConfig.cs  CoreConfig.csproj  CoreConfigParser.cs  ExtraPropertiesEditor.cs  Program.cs  RegExTextBox.cs  Resources1.Designer.cs  ServerProperties.cs
CoreDatabase/: AssemblyInfo.cs  CoreDatabase.csproj  CoreDatabase.csproj.DotSettings  CustomParam.cs  DataObject.cs  DataTableHandler.cs  DatabaseException.cs  DatabaseParameter.cs  DatabaseUtil.cs  ElementBinding.cs  IObjectDatabase.cs  LanguageDataObject.cs  ObjectDatabase.cs  SqlObjectDatabase.cs  WhereClause.cs
CoreServer/: .gitignore  AssemblyInfo.cs  ConsolePacketLib.cs  CoreServer.csproj  CoreServer.csproj.DotSettings  GameServerService.cs  GameServerServiceInstaller.cs  IAction.cs  MainClass.cs
DOLBase/: DOLBase.csproj  WeakMulticastDelegate.cs
DOLConfig/: DOLConfig.cs  DOLConfig.csproj  ServerProperties.cs
DOLDatabase/: DOLDatabase.csproj  SQLObjectDatabase.cs
DOLServer/: ConsolePacketLib.cs  DOLServer.csproj  GameServerService.cs  GameServerServiceInstaller.cs  MainClass.cs
GameServer/: AssemblyInfo.cs  DolWebHook.cs  (+9 more)
Pathing/Detour/: CMakeLists.txt  README.md
Pathing/Detour/Include/: DetourInterface.hpp
Pathing/Detour/Source/: DOLInterface.cpp  DetourInterface.cpp
(+7611 files in other folders)
